[tool.poetry]
name = "mist-v2"
version = "0.1.0"
description = ""
authors = ["haganelego <hagane01061998@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
torch = {version = "2.1.0", source = "torch_cu118"}
torchvision = {version = "0.16.0", source = "torch_cu118"}
diffusers = "0.15.0"
transformers = "4.26.0"
datasets = "2.10.1"
accelerate = "0.22.0"
gradio = "^4.14.0"
ftfy = "^6.1.3"
tensorboard = "^2.15.1"
jinja2 = "^3.1.3"
tqdm = "^4.66.1"
scipy = "^1.11.4"
fire = "^0.5.0"
wandb = "^0.16.2"
safetensors = "^0.4.1"
mediapipe = "^0.10.9"
pynvml = "^11.5.0"
cache = "^1.0.3"
colorama = "^0.4.6"
torchmetrics = "^1.3.0"
xformers = {version = "0.0.22.post4", source = "torch_cu118"}


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
